# Exactor

./: .exactor.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml  release.yml
exactor/: cache.py  cli.py  config.py  hooks.py  log.py  paths.py  router.py
exactor/memory/: __init__.py  base.py  file.py
recipes/explore/: .exactor.yml  README.md  explore.py
recipes/explore/goose-home/explore/: recipe.yaml
recipes/explore/goose-home/verifier/: recipe.yaml
recipes/memory/: store.py
recipes/memory/goose-home/extractor/: recipe.yaml
recipes/vibe/: .exactor.yml  README.md  agent.toml
recipes/vibe/vibe-home/: .gitignore
recipes/vibe/vibe-home/agents/: research.toml
recipes/vibe/vibe-home/prompts/: research.md
templates/: .exactor.yml
tests/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_hooks.py  test_log.py  test_memory.py  test_router.py
